--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "parcel-bundler": "^1.12.3"
   },
   "scripts": {
+    "start": "parcel index.html -p 3000",
     "dev": "parcel watch index.html --no-cache",
     "build": "parcel build index.html"
   }
